--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,30 +1,22 @@
-# name: 哈哈
+name: 部署vite-vue
+on: push
 
-# on: push
-
-# jobs:
-#     vite-vue:
-#         name: 运行一个vite项目
-#         runs-on: ubuntu-latest
-        
-#         steps:
-        
-
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
 jobs:
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+    job-name:
+        name: 工作名称
+        runs-on: ubuntu-latest
+
+        steps:
+            - name: 读取仓库内容
+              uses: actions/checkout@v4
+
+            - name: 读取仓库内容
+              run: |
+                npm i
+                npm run build
+
+            - name: 部署
+              uses: JamesIves/github-pages-deploy-action@v4
+              with:
+                folder: dist                         # 部署的目录
+                branch: gh-pages                     # 部署到哪个分支
