--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "element-plus": "^2.8.3",
     "mavon-editor": "^2.10.4",
     "pinia": "^2.2.2",
+    "vite-project": "file:",
     "vue": "^3.4.37",
     "vue-router": "^4.4.5"
   },
